  - Tables: Table Service Layer supports queries with LINQ.
  - Tables: TableEntity derived classes now support compiled serializers to improve serialization performance.
  - Tables: Table allows query execution with a resolver against non-generic query types (dynamic entity types).
  - Tables: Added IgnorePropertyAttribute for TableEntities to allow individual properties on POCO objects to be ignored during serialization.
  - Tables: If-Match condition for Delete/Replace/Merge operations will not be set if entity ETag is null.
  - Tables: Executing a batch operation with no operations will throw an InvalidOperationException instead of an ArgumentOutOfRangeException.
  - Tables: To support IQueryable projections the TableQuery class Generic type is no longer constrained with where T: ITableEntity, new(). For TableQueries not created with via the IQueryable these same effective constraints are validated at runtime.
  - Tables: Performance improvement to reduce Activator.CreateInstance usage for entity instantiation.
  - Tables: Exposed PropertyAsObject Property in EntityProperty as publicly readable.
  - Tables: Exposed table serialialization logic. Allow users to persist and read back entities that don't derive from TableEntity using static methods(ReadUserObject and WriteUserObject).
  - Tables: Exposed CreateEntityPropertyFromObject in EntityProperty so users can pass in a value and get the corresponding EntityProperty.
  - Tables: Escape single quote in PartitionKey and RowKey correctly while generating URIs.

Issues fixed in 2.1.0.2 :

  - Blobs: Streams opened by OpenRead do not throw NotSupportedException when Flush is called.
  - Tables: Generic ExecuteQuery methods on CloudTable execute IQueryable queries correctly by generating the filter string.

Issues fixed in 2.1.0.3 :

  - All: Registered wait handles are unregistered sooner for more efficient GC.