@@ -609,7 +609,7 @@ namespace Microsoft.WindowsAzure.Storage.Shared.Protocol
             /// <summary>
             /// Specifies the value to use for UserAgent header.
             /// </summary>
-            public const string UserAgentProductVersion = "2.1.0.3";
+            public const string UserAgentProductVersion = "2.1.0.4";
 
             /// <summary>
             /// Master Windows Azure Storage header prefix.
