@@ -158,3 +158,7 @@ Issues fixed in 2.1.0.2 :
 Issues fixed in 2.1.0.3 :
 
   - All: Registered wait handles are unregistered sooner for more efficient GC.
+
+Issues fixed in 2.1.0.4 :
+
+  - Tables: Do not send the cast operator in the table query filter string since the server rejects empty cast operator as Bad Request.
